createCourse method return CreateCourseResponse object(id and trainingId are set here for more clear repository), Getting onto returning availableSeats on course, we set them on runtime for each course, setting it as a attribute on the response object(getAllCourses, getAllCoursesForTrainingCenter, getCourseById), new method for getting the available seats. New method for updating course which handle case when UpdateCourseRequest has less max_seats than current existing attendees. Delete method that delete course and the attendees.